--- a/package.json
+++ b/package.json
@@ -10,10 +10,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^7.1.0",
+    "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "@fortawesome/react-fontawesome": "^3.1.1",
+    "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.2",
+    "firebase": "^12.7.0",
+    "ldrs": "^1.1.9",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.10.1",
+    "stripe": "^20.1.0",
+    "sweetalert2": "^11.26.11",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
