--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "@heroicons/react": "^2.2.0",
+    "@lottiefiles/dotlottie-react": "^0.17.12",
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
